# blender-mcp-senpai

./: .CLAUDE.md  .cursorrules  .gitignore  .rules  ADR.ja.md  AGENTS.md  CLAUDE.md  Makefile  README.md  RULES.md  blender_manifest_template.toml  build.py  pyproject.toml
.cursor/rules/: rules.mdc
.githooks/: post-merge  pre-merge-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: action.yml  ci.yml  test.yml
comfyui/: .gitignore  Makefile  README.md  main.py  pyproject.toml
comfyui/workflows/: single_view.json
docs/extensions/: index.json
extension/: .gitignore  README.md  blender_manifest_template.toml  build.py  main.py  pyproject.toml
extension/blender_senpai/: __init__.py  app.py  blender_manifest.toml  chat_interface.py  history_db.py  i18n.py  llm.py  log_config.py  server.py  system_prompt.py  tools.py  utils.py  webui.py
extension/blender_senpai/repositories/: api_key_repository.py  history_repository.py
extension/http/: debug.http
extension/mcp_senpai/: __init__.py  _types.py  app.py  blender_manifest.toml  chat_interface.py  mdns.py  server.py  usecases.py  utils.py  websocket_server.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: assistant-chat.tsx  assistant.tsx  chat-interface.tsx  simple-chat.tsx
frontend/src/lib/: models.ts
http/: example.env  sketchfab.http
mcp-server/: .cursorrules  README.md  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  blender_client.py  server.py  service_discovery.py
rag/: .gitignore  README.md  main.py  pyproject.toml
rag/tests/: test_main.py
scripts/: dump_bpy.py  release.sh  test.js
src/blender_mcp_senpai/: __init__.py  blender_client.py  server.py  system_prompt.py
src/blender_senpai/: __init__.py  api.py  app.py  blender_manifest.toml  fast_mcp.py  i18n.py  llm.py  mdns.py  server.py  system_prompt.py  tools.py  turntable.py  utils.py  webui.py
src/blender_senpai/adapters/: blender.py
src/blender_senpai/assets/: __init__.py  visualizer.blend
src/blender_senpai/repositories/: api_key_repository.py  assets_repository.py
src/blender_senpai/types/: api_key.py
tests/: test_tools.py
tests/repositories/: test_api_key_repository.py  test_assets_repository.py
web/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/components/: model-icon.tsx
web/src/lib/: models.ts
