[project]
name = "blender-senpai"
version = "0.2.2"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio>=5.29.0",
    "litellm>=1.67.5",
    "mcp>=1.7.1",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "bpy>=4.4.0",
    "fake-bpy-module>=20250423",
    "numpy<2",
    "pip>=25.1", # Use pip that matches the version of the virtual environment, not the system pip. Avoid https://github.com/pypa/pip/issues/11664.
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tomlkit>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.workspace]
members = ["rag"]
