[project]
name = "comfyui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aiohttp>=3.11.8",
    "colour-science",
    "comfyui-frontend-package==1.17.11",
    "comfyui-workflow-templates==0.1.3",
    "custom-rasterizer",
    "diffusers>=0.31.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.30.2",
    "numba",
    "numpy>=1.25.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pixeloe",
    "psutil>=7.0.0",
    "pybind11>=2.13.6",
    "pygltflib>=1.16.4",
    "pymeshlab>=2023.12.post3",
    "pytorch-triton>=3.3.0",
    "pyyaml>=6.0.2",
    "rembg",
    "safetensors>=0.4.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.13.3",
    "torch>=2.8.0.dev20250424",
    "torchaudio>=2.6.0.dev20250424",
    "torchsde>=0.2.6",
    "torchvision>=0.22.0.dev20250424",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "transparent-background",
    "trimesh>=4.6.8",
    "xatlas>=0.0.10",
    "yarl>=1.18.0",
]

[tool.uv]
environments = ["platform_machine == 'x86_64' and sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
pytorch-triton = { index = "pytorch-nightly-cu128" }
torch = { index = "pytorch-nightly-cu128" }
torchvision = { index = "pytorch-nightly-cu128" }
torchaudio = { index = "pytorch-nightly-cu128" }
custom-rasterizer = { path = "ComfyUI/custom_nodes/ComfyUI-Hunyuan3DWrapper/hy3dgen/texgen/custom_rasterizer/dist/custom_rasterizer-0.1.0+torch280dev20250424.cuda128-cp311-cp311-linux_x86_64.whl" }
