[project]
name = "extension"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "websockets>=15.0.1",
    "zeroconf>=0.146.5",
]

[dependency-groups]
dev = [
    "bpy>=4.4.0",
    "fake-bpy-module>=20250423",
    "numpy<2",
    "tomlkit>=0.13.2",
]
