[project]
name = "extension"
version = "0.1.6"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "fastapi>=0.115.12",
    "gradio>=5.29.0",
    "litellm>=1.67.5",
    "pydantic>=2.11.3",
    "websockets>=15.0.1",
    "zeroconf>=0.146.5",
]

[dependency-groups]
dev = [
    "bpy>=4.4.0",
    "fake-bpy-module>=20250423",
    "numpy<2",
    "pip>=25.1",    # Use pip that matches the version of the virtual environment, not the system pip. Avoid https://github.com/pypa/pip/issues/11664.
    "tomlkit>=0.13.2",
]

