[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroaki Ogasawara", email = "13391129+xhiroga@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
