[project]
name = "mcp-server"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroaki Ogasawara", email = "13391129+xhiroga@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "mcp>=1.6.0",
    "websockets>=15.0.1",
    "zeroconf>=0.146.5",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
